--- a/app/views/frontend/components/materials/_materials.scss
+++ b/app/views/frontend/components/materials/_materials.scss
@@ -1,7 +1,9 @@
 .materials_list{
   display: flex;
-
   flex-wrap: wrap;
+  @include  media("<510px"){
+    justify-content: center;
+  }
   &__item{
     padding: 31px;
     width: 362px;
@@ -9,6 +11,16 @@
     @include  media("<1200px"){
       width: 300px;
       height: 400px;
+    }
+    @include  media("<710px"){
+      padding: 20px;
+      width: 290px;
+      height: 370px;
+    }
+    @include  media("<610px"){
+      padding: 10px;
+      width: 240px;
+      height: 330px;
     }
   }
 }
@@ -24,6 +36,16 @@
     width: 250px;
     height: 350px;
     font-size: 18px;
+  }
+  @include  media("<710px"){
+    width: 240px;
+    height: 340px;
+    font-size: 18px;
+  }
+  @include  media("<610px"){
+    width: 230px;
+    height: 320px;
+    font-size: 16px;
   }
 
   &_top{
@@ -70,4 +92,8 @@
 .news_list_wrapper{
   padding: 150px 0 100px;
   margin: 0 -31px;
+  @include media('<710px'){
+    padding: 80px 0 50px;
+    margin: 0 -20px;
+  }
 }
