--- a/app/views/frontend/components/ways/_ways.scss
+++ b/app/views/frontend/components/ways/_ways.scss
@@ -24,6 +24,12 @@
     font-size: 18px;
   }
 
+  @include  media("<610px"){
+    width: 230px;
+    height: 320px;
+    font-size: 18px;
+  }
+
   &_image{
 
     $root: &;
@@ -80,6 +86,10 @@
   display: flex;
   flex-wrap: wrap;
 
+  @include  media("<510px"){
+    justify-content: center;
+  }
+
   &__item{
     padding: 31px;
     width: 362px;
@@ -99,6 +109,11 @@
       height: 390px;
     }
 
+    @include  media("<610px"){
+      width: 240px;
+      height: 335px;
+    }
+
   }
 
   &_space{
@@ -112,6 +127,10 @@
     @include media("<850px"){
       margin: 15px -20px 0;
     }
+
+    @include  media("<610px"){
+      margin: 10px -5px 0;
+    }
     &_item{
       padding: 15px 55px 35px;
       @include media("<1200px"){
@@ -123,6 +142,10 @@
       }
       @include media("<850px"){
         padding: 15px 20px 10px;
+      }
+
+      @include  media("<610px"){
+        padding: 10px 5px 5px;
       }
 
     }
