--- a/app/views/static/about.twig
+++ b/app/views/static/about.twig
@@ -1,11 +1,16 @@
 {% extends "global.html.twig" %}
 {% block content %}
 
-    {% include 'frontend/components/page-content/simple.twig' with {
-        'text':fields.company_text,
-        'img':fields.image.file_url
-    } %}
+    <div class="block_item bg_dark1">
+        <div class="block_item__title">
+            Давай познакомимся
+        </div>
+        <div class="block_item__before"></div>
+        <div class="block_item__content">
+            <div class="block_item__content__text">
+                {{ company.company_text|raw }}
+            </div>
+        </div>
 
-    {% include 'frontend/components/callback/callback.twig' %}
-    {% include 'frontend/components/advantages/advantages.twig' %}
+    </div>
 {% endblock %}
