--- a/app/views/static/email_write.twig
+++ b/app/views/static/email_write.twig
@@ -2,12 +2,9 @@
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
     {% if name %}<p><b>Имя:</b> {{ name }}</p>{% endif %}
-    {% if from %}<p><b>Из:</b> {{ from }}</p>{% endif %}
     {% if to %}<p><b>В:</b> {{ to }}</p>{% endif %}
-
-    {% if phone %} <p><b>Телефон:</b> {{ phone }}</p>{% endif %}
     {% if email %}<p><b>Email:</b> {{ email }}</p>{% endif %}
-    {% if brand %}<p><b>Марка:</b> {{ brand }}</p>{% endif %}
-    {% if model %}<p><b>Модель:</b> {{ model }}</p>{% endif %}
+    {% if type %}<p><b>Тема:</b> {{ type }}</p>{% endif %}
     {% if text %}<p><b>Комментарий:</b> {{ text }}</p>{% endif %}
+    {% if comment %}<p><b>Комментарий:</b> {{ comment }}</p>{% endif %}
 {% endblock %}
